fixed scrollbar not hidden

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -132,6 +132,7 @@ code {
 a
 {
     text-decoration: none;
+    color: white;
 }
 
 .eventLink
